--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "react-bootstrap": "^2.3.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
-    "yup": "^0.32.11",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
     "workbox-cacheable-response": "^6.5.3",
@@ -41,6 +41,7 @@
     "workbox-range-requests": "^6.5.3",
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "workbox-streams": "^6.5.3",
+    "yup": "^0.32.11"
   }
 }
